--- a/analysis/storyline.ipynb
+++ b/analysis/storyline.ipynb
@@ -160,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -263,7 +263,7 @@
        "4   15749160                0     2           3           0      4             10             CL"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -274,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 7,
    "metadata": {
     "hideCode": false,
     "hidePrompt": true
@@ -308,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {
     "hideCode": true,
     "hidePrompt": true
@@ -330,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "metadata": {
     "hideCode": true,
     "hidePrompt": true
@@ -356,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 10,
    "metadata": {
     "hideCode": true,
     "hidePrompt": true
@@ -387,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 11,
    "metadata": {
     "hideCode": true,
     "hidePrompt": true
@@ -575,7 +575,7 @@
        "max          1.000        1.000               23.000               23.000      2.000  "
       ]
      },
-     "execution_count": 45,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -586,7 +586,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {
     "hideCode": true,
     "hidePrompt": true
@@ -612,7 +612,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 13,
    "metadata": {
     "hideCode": true,
     "hidePrompt": true
@@ -642,7 +642,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 14,
    "metadata": {
     "hideCode": true,
     "hidePrompt": true
@@ -704,40 +704,6 @@
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>296</th>\n",
-       "      <td>10127163</td>\n",
-       "      <td>Area</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>C</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>8</td>\n",
-       "      <td>8</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>444</th>\n",
-       "      <td>10127163</td>\n",
-       "      <td>Separation</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>C</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>5</td>\n",
-       "      <td>5</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>148</th>\n",
        "      <td>10127163</td>\n",
        "      <td>Width</td>\n",
@@ -755,28 +721,45 @@
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>244</th>\n",
-       "      <td>10192168</td>\n",
-       "      <td>Width</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>L</td>\n",
+       "      <th>296</th>\n",
+       "      <td>10127163</td>\n",
+       "      <td>Area</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>C</td>\n",
        "      <td>1</td>\n",
-       "      <td>0</td>\n",
        "      <td>1</td>\n",
-       "      <td>0</td>\n",
        "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>9</td>\n",
-       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>8</td>\n",
+       "      <td>8</td>\n",
        "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>540</th>\n",
+       "      <th>444</th>\n",
+       "      <td>10127163</td>\n",
+       "      <td>Separation</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>C</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>5</td>\n",
+       "      <td>5</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>538</th>\n",
        "      <td>10192168</td>\n",
        "      <td>Separation</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2.0</td>\n",
        "      <td>C</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
@@ -806,11 +789,11 @@
        "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>392</th>\n",
+       "      <th>390</th>\n",
        "      <td>10192168</td>\n",
        "      <td>Area</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2.0</td>\n",
        "      <td>C</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
@@ -821,6 +804,23 @@
        "      <td>2</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>244</th>\n",
+       "      <td>10192168</td>\n",
+       "      <td>Width</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>L</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>9</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -840,40 +840,6 @@
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>297</th>\n",
-       "      <td>10232160</td>\n",
-       "      <td>Area</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>C</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>5</td>\n",
-       "      <td>6</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>445</th>\n",
-       "      <td>10232160</td>\n",
-       "      <td>Separation</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>C</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>5</td>\n",
-       "      <td>4</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>149</th>\n",
        "      <td>10232160</td>\n",
        "      <td>Width</td>\n",
@@ -890,6 +856,40 @@
        "      <td>0</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>445</th>\n",
+       "      <td>10232160</td>\n",
+       "      <td>Separation</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>C</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>5</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>297</th>\n",
+       "      <td>10232160</td>\n",
+       "      <td>Area</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>C</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>5</td>\n",
+       "      <td>6</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
@@ -897,34 +897,34 @@
       "text/plain": [
        "          sid       variable  pre  main sim  CVS_table_2  CVS_graph_2  CVS_table_3  CVS_graph_3  \\\n",
        "0    10127163  Concentration  1.0   3.0   L            1            1            1            1   \n",
-       "296  10127163           Area  NaN   NaN   C            1            1            1            1   \n",
-       "444  10127163     Separation  NaN   NaN   C            1            1            1            1   \n",
        "148  10127163          Width  1.0   3.0   L            1            1            1            1   \n",
-       "244  10192168          Width  1.0   0.0   L            1            0            1            0   \n",
-       "540  10192168     Separation  NaN   NaN   C            1            1            1            1   \n",
+       "296  10127163           Area  3.0   3.0   C            1            1            1            1   \n",
+       "444  10127163     Separation  3.0   3.0   C            1            1            1            1   \n",
+       "538  10192168     Separation  1.0   2.0   C            1            1            1            1   \n",
        "96   10192168  Concentration  1.0   3.0   L            1            1            1            1   \n",
-       "392  10192168           Area  NaN   NaN   C            1            0            0            0   \n",
+       "390  10192168           Area  1.0   2.0   C            1            0            0            0   \n",
+       "244  10192168          Width  1.0   0.0   L            1            0            1            0   \n",
        "1    10232160  Concentration  1.0   1.0   L            1            1            1            1   \n",
-       "297  10232160           Area  NaN   NaN   C            1            1            1            1   \n",
-       "445  10232160     Separation  NaN   NaN   C            1            1            1            1   \n",
        "149  10232160          Width  1.0   1.0   L            0            0            0            0   \n",
+       "445  10232160     Separation  1.0   3.0   C            1            1            1            1   \n",
+       "297  10232160           Area  1.0   3.0   C            1            1            1            1   \n",
        "\n",
        "     CVS_table_4  CVS_graph_4  number_points_table  number_points_graph  sim_index  \n",
        "0              1            1                    7                    6          1  \n",
+       "148            1            1                    7                    7          1  \n",
        "296            1            1                    8                    8          2  \n",
        "444            1            1                    5                    5          2  \n",
-       "148            1            1                    7                    7          1  \n",
-       "244            1            0                    9                    0          2  \n",
-       "540            1            1                    4                    4          1  \n",
+       "538            1            1                    4                    4          1  \n",
        "96             1            1                    6                    6          2  \n",
-       "392            0            0                    2                    0          1  \n",
+       "390            0            0                    2                    0          1  \n",
+       "244            1            0                    9                    0          2  \n",
        "1              1            1                    4                    4          1  \n",
-       "297            1            1                    5                    6          2  \n",
+       "149            0            0                    0                    0          1  \n",
        "445            1            1                    5                    4          2  \n",
-       "149            0            0                    0                    0          1  "
+       "297            1            1                    5                    6          2  "
       ]
      },
-     "execution_count": 23,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -949,7 +949,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 15,
    "metadata": {
     "hideCode": true,
     "hidePrompt": true
@@ -975,20 +975,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {
     "hideCode": true,
     "hidePrompt": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Correlation coeff for table and graph CVS: SpearmanrResult(correlation=0.61892063046789791, pvalue=6.9922209879042454e-64)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# from scipy import stats\n",
     "# print \"Correlation coeff for table and graph CVS:\", stats.spearmanr(data['CVS_table'],data['CVS_graph'])"
@@ -996,7 +988,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 17,
    "metadata": {
     "hideCode": true,
     "hidePrompt": true
@@ -1017,7 +1009,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 18,
    "metadata": {
     "hideCode": true,
     "hidePrompt": true
@@ -1044,7 +1036,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {
     "hideCode": true,
     "hidePrompt": true
@@ -1065,7 +1057,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {
     "hideCode": true,
     "hidePrompt": true
@@ -1095,7 +1087,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {
     "hideCode": true,
     "hidePrompt": true
