Started looking about attitude measues

--- a/analysis/data_log_to_pre_post_surveys_connector.ipynb
+++ b/analysis/data_log_to_pre_post_surveys_connector.ipynb
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 41,
    "metadata": {
     "collapsed": false
    },
@@ -45,16 +45,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "These columns have no entries: set([u'[prior_lab] What lab courses are you presently taking or have taken in the past? Check all that apply. [Higher level physics labs]'])\n"
+      "These columns have no entries and were removed: set([u'[prior_lab] What lab courses are you presently taking or have taken in the past? Check all that apply. [Higher level physics labs]'])\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "(148, 22)"
+       "(148, 24)"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -98,9 +98,25 @@
     "\n",
     "    #convert all ids so they match ids in logs\n",
     "    pre_analyzeable['sid'] = pre_analyzeable['id'].apply(lambda i: ids_pre_to_logs(i))\n",
+    "\n",
+    "    def used_similar_or_same_sim(sim,answer):\n",
+    "        if sim in answer or 'both' in answer:\n",
+    "            return 1\n",
+    "        else:\n",
+    "            return 0\n",
+    "    convert_experience = {'1-2 (roughly)':1, '3-5 (roughly)':2, '6+ (roughly)':3, 'None':0}\n",
+    "\n",
+    "    #quantify in an ordinal variable how much virtual lab experience they have\n",
+    "    pre_analyzeable['prior_number_virtual_labs'] = pre_analyzeable['prior_number_virtual_labs'].apply(lambda answer: convert_experience[answer])\n",
+    "\n",
+    "    #binarize their familiarity with similar topic per sim\n",
+    "    pre_analyzeable['similar_L'] = pre_analyzeable['prio_sims_other'].apply(lambda answer: used_similar_or_same_sim('light',answer))\n",
+    "    pre_analyzeable['similar_C'] = pre_analyzeable['prio_sims_other'].apply(lambda answer: used_similar_or_same_sim('capacitor',answer))\n",
+    "    pre_analyzeable['same_L'] = pre_analyzeable['prior_sims_phet'].apply(lambda answer: used_similar_or_same_sim('Light',answer))\n",
+    "    pre_analyzeable['same_C'] = pre_analyzeable['prior_sims_phet'].apply(lambda answer: used_similar_or_same_sim('Capacitor',answer))\n",
     "    return pre_analyzeable\n",
     "\n",
-    "COLUMNS = [u'[prior_lab] What lab courses are you presently taking or have taken in the past? Check all that apply. [High school level laboratory]',u'[prior_lab] What lab courses are you presently taking or have taken in the past? Check all that apply. [First year undergraduate physics laboratory]',u'[prior_lab] What lab courses are you presently taking or have taken in the past? Check all that apply. [First year undergraduate chemistry laboratory]',u'[prior_lab] What lab courses are you presently taking or have taken in the past? Check all that apply. [Higher level physics labs]',u'[prior_lab] What lab courses are you presently taking or have taken in the past? Check all that apply. [Higher level chemistry labs]',u'prior_sims_phet',u'prio_sims_other',u'prior_number_virtual_labs',u'perceivedvalue.0',u'perceivedvalue.1',u'perceivedvalue.2',u'perceivedvalue.3',u'taskinterpretation.0',u'taskinterpretation.1',u'taskinterpretation.2',u'taskinterpretation.3',u'taskinterpretation.4',u'pocc.0',u'pocc.1',u'pocc.2',u'pocc.3',u'pocc.4','sid']\n",
+    "COLUMNS = [u'[prior_lab] What lab courses are you presently taking or have taken in the past? Check all that apply. [High school level laboratory]',u'[prior_lab] What lab courses are you presently taking or have taken in the past? Check all that apply. [First year undergraduate physics laboratory]',u'[prior_lab] What lab courses are you presently taking or have taken in the past? Check all that apply. [First year undergraduate chemistry laboratory]',u'[prior_lab] What lab courses are you presently taking or have taken in the past? Check all that apply. [Higher level physics labs]',u'[prior_lab] What lab courses are you presently taking or have taken in the past? Check all that apply. [Higher level chemistry labs]','similar_L','similar_C','same_L','same_C',u'prior_number_virtual_labs',u'perceivedvalue.0',u'perceivedvalue.1',u'perceivedvalue.2',u'perceivedvalue.3',u'taskinterpretation.0',u'taskinterpretation.1',u'taskinterpretation.2',u'taskinterpretation.3',u'taskinterpretation.4',u'pocc.0',u'pocc.1',u'pocc.2',u'pocc.3',u'pocc.4','sid']\n",
     "\n",
     "pre = get_clean_pre_survey()[COLUMNS]\n",
     "# pre.drop(['Collector','Completion Time','Created At','GET Variables','IP Address','Internal ID','Invite Code','Invite Email','Invite Name','Language','Location','Number of Saves','Page 1 | Time on Page','Page 2 | Time on Page','Page 3 | Time on Page','Page 4 | Time on Page','Page 5 | Time on Page','Page 6 | Time on Page','Page 7 | Time on Page','Page 8 | Time on Page','Page 9 | Time on Page','Referrer','Status','Updated At','Username','Weighted Score','[open1] How did you go about learning physics through the virtual lab?'],axis=1,inplace=True)\n",
@@ -108,13 +124,13 @@
     "pre.dropna(axis=1, how='all',inplace=True)\n",
     "D = set(pre.columns)\n",
     "pre.to_csv('pre_survey_results.txt', sep='\\t')\n",
-    "print \"These columns have no entries:\",C-D\n",
+    "print \"These columns have no entries and were removed:\",C-D\n",
     "pre.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 42,
    "metadata": {
     "collapsed": false
    },
@@ -131,12 +147,12 @@
        "      <th>[prior_lab] What lab courses are you presently taking or have taken in the past? Check all that apply. [First year undergraduate physics laboratory]</th>\n",
        "      <th>[prior_lab] What lab courses are you presently taking or have taken in the past? Check all that apply. [First year undergraduate chemistry laboratory]</th>\n",
        "      <th>[prior_lab] What lab courses are you presently taking or have taken in the past? Check all that apply. [Higher level chemistry labs]</th>\n",
-       "      <th>prior_sims_phet</th>\n",
-       "      <th>prio_sims_other</th>\n",
+       "      <th>similar_L</th>\n",
+       "      <th>similar_C</th>\n",
+       "      <th>same_L</th>\n",
+       "      <th>same_C</th>\n",
        "      <th>prior_number_virtual_labs</th>\n",
        "      <th>perceivedvalue.0</th>\n",
-       "      <th>perceivedvalue.1</th>\n",
-       "      <th>perceivedvalue.2</th>\n",
        "      <th>...</th>\n",
        "      <th>taskinterpretation.1</th>\n",
        "      <th>taskinterpretation.2</th>\n",
@@ -157,12 +173,12 @@
        "      <td>1.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>Neither.</td>\n",
-       "      <td>No.</td>\n",
-       "      <td>3-5 (roughly)</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
        "      <td>Mostly</td>\n",
-       "      <td>Somewhat</td>\n",
-       "      <td>Not at all</td>\n",
        "      <td>...</td>\n",
        "      <td>Somewhat</td>\n",
        "      <td>Mostly</td>\n",
@@ -181,12 +197,12 @@
        "      <td>1.0</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>Neither.</td>\n",
-       "      <td>No.</td>\n",
-       "      <td>None</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "      <td>Somewhat</td>\n",
-       "      <td>Definitely</td>\n",
-       "      <td>Not at all</td>\n",
        "      <td>...</td>\n",
        "      <td>Definitely</td>\n",
        "      <td>Mostly</td>\n",
@@ -205,11 +221,11 @@
        "      <td>1.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>Neither.</td>\n",
-       "      <td>No.</td>\n",
-       "      <td>1-2 (roughly)</td>\n",
-       "      <td>Not at all</td>\n",
-       "      <td>Somewhat</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
        "      <td>Not at all</td>\n",
        "      <td>...</td>\n",
        "      <td>Somewhat</td>\n",
@@ -229,12 +245,12 @@
        "      <td>1.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>Neither.</td>\n",
-       "      <td>Yes, I have used a different virtual lab on ca...</td>\n",
-       "      <td>6+ (roughly)</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
        "      <td>Somewhat</td>\n",
-       "      <td>Mostly</td>\n",
-       "      <td>Not at all</td>\n",
        "      <td>...</td>\n",
        "      <td>Definitely</td>\n",
        "      <td>Mostly</td>\n",
@@ -253,12 +269,12 @@
        "      <td>1.0</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>Neither.</td>\n",
-       "      <td>Yes, I have used a different virtual lab on li...</td>\n",
-       "      <td>3-5 (roughly)</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
        "      <td>Somewhat</td>\n",
-       "      <td>Mostly</td>\n",
-       "      <td>Not at all</td>\n",
        "      <td>...</td>\n",
        "      <td>Somewhat</td>\n",
        "      <td>Not at all</td>\n",
@@ -273,7 +289,7 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 22 columns</p>\n",
+       "<p>5 rows × 24 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -305,26 +321,19 @@
        "8                                                NaN                                                                                      \n",
        "9                                                NaN                                                                                      \n",
        "\n",
-       "  prior_sims_phet                                    prio_sims_other  \\\n",
-       "5        Neither.                                                No.   \n",
-       "6        Neither.                                                No.   \n",
-       "7        Neither.                                                No.   \n",
-       "8        Neither.  Yes, I have used a different virtual lab on ca...   \n",
-       "9        Neither.  Yes, I have used a different virtual lab on li...   \n",
+       "   similar_L  similar_C  same_L  same_C  prior_number_virtual_labs  \\\n",
+       "5          0          0       0       0                          2   \n",
+       "6          0          0       0       0                          0   \n",
+       "7          0          0       0       0                          1   \n",
+       "8          0          1       0       0                          3   \n",
+       "9          1          0       0       0                          2   \n",
        "\n",
-       "  prior_number_virtual_labs perceivedvalue.0 perceivedvalue.1  \\\n",
-       "5             3-5 (roughly)           Mostly         Somewhat   \n",
-       "6                      None         Somewhat       Definitely   \n",
-       "7             1-2 (roughly)       Not at all         Somewhat   \n",
-       "8              6+ (roughly)         Somewhat           Mostly   \n",
-       "9             3-5 (roughly)         Somewhat           Mostly   \n",
-       "\n",
-       "  perceivedvalue.2    ...    taskinterpretation.1 taskinterpretation.2  \\\n",
-       "5       Not at all    ...                Somewhat               Mostly   \n",
-       "6       Not at all    ...              Definitely               Mostly   \n",
+       "  perceivedvalue.0    ...    taskinterpretation.1 taskinterpretation.2  \\\n",
+       "5           Mostly    ...                Somewhat               Mostly   \n",
+       "6         Somewhat    ...              Definitely               Mostly   \n",
        "7       Not at all    ...                Somewhat             Somewhat   \n",
-       "8       Not at all    ...              Definitely               Mostly   \n",
-       "9       Not at all    ...                Somewhat           Not at all   \n",
+       "8         Somewhat    ...              Definitely               Mostly   \n",
+       "9         Somewhat    ...                Somewhat           Not at all   \n",
        "\n",
        "  taskinterpretation.3 taskinterpretation.4         pocc.0         pocc.1  \\\n",
        "5             Somewhat             Somewhat          Often          Often   \n",
@@ -340,10 +349,10 @@
        "8      Often      Often          Often  24566161  \n",
        "9      Often  Sometimes  Almost always  46792161  \n",
        "\n",
-       "[5 rows x 22 columns]"
+       "[5 rows x 24 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
