Reran stats for poster

--- a/analysis/copy of scipts and notebooks for AIED submission/stat_comparisons_for_storyline.ipynb
+++ b/analysis/copy of scipts and notebooks for AIED submission/stat_comparisons_for_storyline.ipynb
@@ -4,6 +4,7 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
+    "collapsed": false,
     "hideCode": false,
     "hidePrompt": true
    },
@@ -31,6 +32,7 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
+    "collapsed": false,
     "hideCode": false,
     "hidePrompt": true
    },
@@ -72,6 +74,7 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {
+    "collapsed": true,
     "hideCode": false,
     "hidePrompt": true
    },
@@ -89,6 +92,7 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {
+    "collapsed": true,
     "hideCode": false,
     "hidePrompt": true
    },
@@ -102,6 +106,7 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {
+    "collapsed": true,
     "hideCode": false,
     "hidePrompt": true
    },
@@ -117,6 +122,7 @@
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {
+    "collapsed": true,
     "hideCode": false,
     "hidePrompt": true
    },
@@ -151,6 +157,7 @@
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {
+    "collapsed": true,
     "hideCode": true,
     "hidePrompt": true
    },
@@ -163,6 +170,7 @@
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {
+    "collapsed": true,
     "hideCode": true,
     "hidePrompt": true
    },
@@ -189,6 +197,7 @@
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {
+    "collapsed": true,
     "hideCode": true,
     "hidePrompt": true
    },
@@ -211,6 +220,7 @@
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {
+    "collapsed": true,
     "hideCode": true,
     "hidePrompt": true
    },
@@ -223,6 +233,7 @@
    "cell_type": "code",
    "execution_count": 11,
    "metadata": {
+    "collapsed": true,
     "hideCode": true,
     "hidePrompt": true
    },
@@ -249,6 +260,7 @@
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {
+    "collapsed": true,
     "hideCode": true,
     "hidePrompt": true
    },
@@ -278,6 +290,7 @@
    "cell_type": "code",
    "execution_count": 13,
    "metadata": {
+    "collapsed": false,
     "hideCode": true,
     "hidePrompt": true
    },
@@ -523,6 +536,7 @@
    "cell_type": "code",
    "execution_count": 14,
    "metadata": {
+    "collapsed": true,
     "hideCode": true,
     "hidePrompt": true
    },
@@ -592,7 +606,9 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -674,7 +690,9 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -759,7 +777,9 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -844,6 +864,7 @@
    "cell_type": "code",
    "execution_count": 18,
    "metadata": {
+    "collapsed": false,
     "hideCode": true,
     "hidePrompt": true
    },
@@ -940,7 +961,9 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -1083,6 +1106,7 @@
    "cell_type": "code",
    "execution_count": 20,
    "metadata": {
+    "collapsed": false,
     "hideCode": true,
     "hidePrompt": true
    },
@@ -1178,7 +1202,9 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1328,7 +1354,9 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1441,7 +1469,9 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1559,6 +1589,7 @@
    "cell_type": "code",
    "execution_count": 25,
    "metadata": {
+    "collapsed": false,
     "hideCode": true,
     "hidePrompt": true
    },
@@ -1631,7 +1662,9 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1695,7 +1728,9 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1777,9 +1812,9 @@
   "celltoolbar": "Hide code",
   "hide_code_all_hidden": true,
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python [Anaconda2]",
    "language": "python",
-   "name": "python2"
+   "name": "Python [Anaconda2]"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1791,7 +1826,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.13"
+   "version": "2.7.12"
   },
   "toc": {
    "nav_menu": {},
